tests/fixtures/negative/delegated_only_escape.wrela
// expect: SEM0009: delegated-only value DelegatedHardware cannot cross into owned_hardware phase
module negative.delegated_only_escape

data DelegatedLeak { hardware: DelegatedHardware }

image Bad {
    transitions { delegated_hardware -> owned_hardware }

    phase delegated_hardware(hardware: DelegatedHardware) -> DelegatedLeak {
        return DelegatedLeak(hardware = hardware)
    }

    phase owned_hardware(hardware: DelegatedLeak) -> never {
        while true {}
    }
}
